ChangeLog for 2.53.1

//Beta 51
Te old water emulation flag is now enabled whenever loading a quest 
	oolder than 2.50. 
	( ZoriaRPG, 4th June, 2020 )
	
Added 'Old 2.10 Water' emulation to ZC Player.
	This is intended as a patch for old 2.10 quests that have
	very-specific water combo placement where you are expected
	to use the ladder (while you have the flippers), but the flippers
	engage.
	( ZoriaRPG, 26th May, 2020 )

//Beta 50
Try to properly initialise directItem and directItemA.
	( ZoriaRPG, 23rd May, 2020 )
	
//Beta 49
Slight changes to the directItem init when loading quests, that
	now checks if the prior quest was a B+A subscreen type. 
	( ZoriaRPG, 23rd May, 2020 )

//Beta 48
Fixed a memory leak when compiling scripts and exiting out of
	the assign scripts dialogue with Cancel.
	( ZoriaRPG, 16th May, 2020 )

//Beta 47 
Added sanity guard to inline bool get_item(int id).
	( ZoriaRPG, 12th May, 2020 )

//Beta 46
Fixed possible crash and bad error message for Screen->Combo[] errors.

//Beta 45
Slight timing fix to directItemA, for B-only quests. 
	( ZoriaRPG, 30th April, 2020 )

//Beta 44
You can now press C in the Tile Editor to copy a tile, then
	select a range of tiles and press F to FLOODFILL paste the copied
	tile to every position.
In the Tile Editor, electing multiple tiles, pressing C, 
	then selecting multiple tiles and pressing O will now overlay
	the copied selection tot he dest selection, triming overflow.
Mass Overlay now works properly, overlaying to each tile space, rather
	than overlaying to the first tile and copying the result of that
	overlay to the remaining spaces.
	
//Beta 43
Make default cheat modkeys SHIFT, not CTL+SHIFT.
	( ZoriaRPG, 26th April, 2020 )
	
//Beta 42: The Meaning of Life, the Universe, and Everything.
Added a new Quest Report type: Bugged Next-> Combos.
	This will scan a quest for any Next-> combo type that also has a secret
	flag on it, and report that this may be erroneous. (It is legal to